# sfls

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml  package.json
.github/workflows/: gateway.yml  server.yml
apps/gateway/: Dockerfile  README.md  package.json
apps/tv/: .prettierrc  app.json  global.css  metro.config.js  package.json  tailwind.config.js  tsconfig.json
bruno/: Create user.bru  Get media item poster.bru  Get media item stream.bru  Get media item.bru  Get media items.bru  bruno.json
bruno/sfls/: Create library.bru  Create session.bru  Create user.bru  Get continue watching.bru  Get media item.bru  Get media items.bru
client/: .prettierrc  metro.config.js  package.json
gateway/: Dockerfile  context.ts  index.ts  package.json  trpc.ts
openapi/: Cargo.toml  README.md  openapi.yaml
server/: .gitignore  Cargo.toml  queue.db
server/api/: Cargo.toml
server/api/src/: errors.rs  main.rs
server/api/src/controllers/: library.rs
server/api/src/models/: library.rs
server/application/: Cargo.toml
server/application/src/: lib.rs
server/application/src/commands/: command.rs
server/application/src/ports/: job.rs  job_factory.rs  queue.rs
server/domain/: Cargo.toml
server/domain/src/: errors.rs  lib.rs
server/domain/src/entities/: library.rs  media.rs  media_type.rs  user.rs
server/domain/src/repositories/: library.rs
server/infrastructure/: Cargo.toml
server/infrastructure/migrations/2025-05-15-102013_create_libraries/: down.sql  up.sql
server/infrastructure/migrations/2025-05-15-102115_create_media/: up.sql
server/infrastructure/src/: di.rs  lib.rs  schema.rs  state.rs
server/infrastructure/src/jobs/: factory.rs  scan_folder.rs  scan_library.rs
server/infrastructure/src/library_scanners/: factory.rs
server/infrastructure/src/persistence/models/: file.rs  library.rs  media.rs
server/infrastructure/src/persistence/repositories/: library.rs
server/infrastructure/src/queues/: tokio.rs
server/migrations/2025-04-10-103414_create_media/: up.sql
server/migrations/2025-04-10-122133_create_libraries/: up.sql
server/migrations/2025-04-11-021620_add_media_library_id/: down.sql  up.sql
server/migrations/2025-04-11-062423_add_media_parent_id/: up.sql
server/migrations/2025-05-02-134626_create_users/: up.sql
server/migrations/2025-05-04-110743_create_history/: down.sql
server/src/: errors.rs  impl.rs  jobs.rs  libraries.rs  main.rs  media.rs  middlware.rs  models.rs  nfo.rs  schema.rs  state.rs  views.rs
server/src/clients/: fanart.rs  mod.rs
server/src/factories/artwork_fetcher/: mod.rs  movie.rs  tvshow.rs
server/src/factories/library_scanner/: movie.rs  tvshow.rs
server/src/jobs/: mod.rs  scan_library.rs  scan_season_folder.rs
server/src/repositories/: history.rs  library.rs  media.rs
server/src/routes/: mod.rs
server/src/routes/libraries/: mod.rs
server/src/routes/media/: index.rs  mod.rs
server/src/routes/media/_media_id/: index.rs  mod.rs
server/src/routes/media/_media_id/fanart/: index.rs
server/src/routes/media/_media_id/images/: mod.rs
server/src/routes/media/_media_id/images/_file_type/: index.rs
server/src/routes/media/_media_id/poster/: index.rs
server/src/routes/media/_media_id/stream/: index.rs
server/src/routes/media/_media_id/stream/heartbeat/: index.rs
server/src/routes/media/_media_id/thumbnail/: index.rs  mod.rs
server/src/routes/media/continue/: index.rs
server/src/routes/sessions/: index.rs
server/src/routes/users/: index.rs
server/src/scanners/: mod.rs  movie.rs  tvshow.rs
tmp/: Cargo.toml  Dockerfile  diesel.toml
tmp/src/: nfo.rs  (+1 more)
(+56 files in other folders)
