[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
openapi = { path = "../openapi" }
async-trait = "0.1.88"
axum = "0.8.3"
axum-extra = "0.10.1"
bon = "3.5.2"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.9", features = ["chrono", "serde_json", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_cli = { version = "2.2.9", default-features = false, features = ["sqlite"] }
dotenvy = "0.15.7"
infer = "0.19.0"
quick-xml = { version = "0.37.4", features = ["serialize"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
effectum = "0.7.0"
rs-snowflake = "0.6.0"
regex = "1.11.1"
