[package]
name = "sfls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["query"] }
chrono = { version = "0.4.41", features = ["serde"] }
deadpool = "0.12.2"
diesel = { version = "2.2.10", features = ["chrono", "serde_json"] }
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }
diesel_async_migrations = "0.15.0"
diesel_json = "0.2.1"
dotenvy = "0.15.7"
image = "0.25.6"
infer = "0.19.0"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
num_cpus = "1.16.0"
password-auth = "1.0.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["fs", "rt-multi-thread"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
