[workspace]
resolver = "3"
members = [
    "application",
    "api",
    "domain",
    "infrastructure"
]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["chrono", "serde_json"] }
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["fs", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
